--- a/src/styles/pages/Register.scss
+++ b/src/styles/pages/Register.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 360px;
   margin-bottom: 100px;
 }
 
@@ -45,5 +46,7 @@
   background-color: root.$main-blue !important;
   padding: 16px 0 !important;
   font-weight: 600 !important;
+  border-radius: 8px !important;
+  max-width: 360px;
   width: 100%;
 }
